@@ -1,3 +1,6 @@
+2003-10-03  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
+      * vtkGdcmReader is now able to read rgb dicom file.
+      * src/gdcmHeaderHelper : GetNumberOfScalarComponents()
 2003-10-02  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
       * src/*.cxx removed pragma thingies to src/gdcmCommon.h
         Two reasons: - clear things
